# NixEngine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
include/: Application.h  VertexBufferLayout.h  assetmanager.h  camera.h  debugconsole.h  debugger.h  directory.h  framebuffer.h  indexBuffer.h  light.h  material.h  mesh.h  model.h  renderer.h  scene.h  shader.h  shadermanager.h  shadowmap.h  skybox.h  storage.h  system.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h  window.h
include/Light/: ambientlight.h  directionallight.h  light.h  pointlight.h  positionallight.h  spotlight.h
res/model/: error.mtl  floor.mtl  hmm.mtl
res/shader/: basic.frag  basic.vert  shadow_map.vert
src/: Application.cpp  assetmanager.cpp  camera.cpp  debugconsole.cpp  debugger.cpp  directory.cpp  framebuffer.cpp  glad.c  indexBuffer.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp  shader.cpp  shadermanager.cpp  shadowmap.cpp  skybox.cpp  storage.cpp  system.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp  window.cpp
src/Light/: ambientlight.cpp  directionallight.cpp  light.cpp  pointlight.cpp  positionallight.cpp  spotlight.cpp
